optimize code, fix bugs